--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 
+v1.1.1, August 26th 2014 -- Minor changes.
 v1.1.0, August 26th 2014 -- Added symbols.
 v1.0.3, August 3nd 2014 -- Made assertStateEquals() work with null field values
 v1.0.2, August 2nd 2014 -- Added assertStateEquals()
