--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 
+v2.0.0, September 11th 2014 -- Symbols are entities (backwards incompatible) and addition of blog.digraph
 v1.1.1, August 26th 2014 -- Minor changes.
 v1.1.0, August 26th 2014 -- Added symbols.
 v1.0.3, August 3nd 2014 -- Made assertStateEquals() work with null field values
