--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,8 @@
 
+v2.0.1, September 12th 2014 -- Fixing GWT compatability of apache.commons.lang3
 v2.0.0, September 11th 2014 -- Symbols are entities (backwards incompatible) and addition of blog.digraph
-v1.1.1, August 26th 2014 -- Minor changes.
-v1.1.0, August 26th 2014 -- Added symbols.
+v1.1.1, August 26th 2014 -- Minor changes
+v1.1.0, August 26th 2014 -- Added symbol.
 v1.0.3, August 3nd 2014 -- Made assertStateEquals() work with null field values
 v1.0.2, August 2nd 2014 -- Added assertStateEquals()
 v1.0.1, July 25th 2014 -- Initial relase of blog.value_objects
